CVS
1. Updated log information for "H.225 Information" message
        Thanks to Andrew Maksimov

Release 0.8.3
1. Added MediaWaitForConnect configuration option (Thanks to Tim King,
        for solving PSTN call ring problem)
2. Changed CallingPartyNumber IE to disable the CLI screening. (Thanks to
   Tim King)
3. Added fast start response in ALERTING message for early audio. Solves the
        problem to listening PSTN ring or announcements.

Release 0.8.2
1. Used rand number for conference id, Thanks to Patrick Jordan
   (Fixes mapping all calls from the same origin number to the destination
   of the first call for H323 gatekeeper (Quintum Voicemaster))
2. Fixed bug for codec type comparison, Thanks to Legostayev Denis
3. Fixed "#*," digits bug for dialedDigit & callerID, Thanks to Vlasis
   Hatzistavrou
4. Added ETC for call hold, Thanks to Dan Austin
5. Fixed bug causing core dump for manual ringback in cleared call
6. Added G.728 audio codec negotiation support, Thanks to Aleksandar Sutic

Release 0.8.1
1. Fixed bug causing dialed digits alias being set as a char string.
2. Added close for cmdListener
3. Fixed called party number set.
4. Other minor FreeBSD support updates.

Release 0.8
1. ManualRingback support (Benni A. Aswin)
2. Gateway/Endpoint config
3. Fixed lot of warning messages generated while compiling with -Wall option.
   (Thanks to Ben Greear for this).
4. Removed all mutexes from code and used sockets to communicate with stack
   thread. From threading perspective this means, stack executes in a single
   thread including callbacks. As long as applications have only one thread
   issuing commands to stack thread, they don't have to worry about threading
   and if application has multiple threads issuing stack commands then they
   have to protect those calls using mutexes.
5. Few bug fixes.
        
Release 0.7.3
1. Added H.245 based alphanumeric and signal DTMF support.
2. Added DTMF support using Q.931 based keypad information element.